Substituted Collections.unmodifiableSet with Set.copyOf